[gd_scene load_steps=7 format=3 uid="uid://bg6ftfytfavnj"]

[ext_resource type="AudioStream" uid="uid://cy0sdr6v4vhwh" path="res://assets/music/game-background-359782.mp3" id="1_83psx"]
[ext_resource type="Script" path="res://scripts/background_music.gd" id="1_u6r47"]
[ext_resource type="AudioStream" uid="uid://dnlv8wmkr6cxx" path="res://assets/music/tekno-kick-loop-176-bpm-292894.mp3" id="2_u6r47"]

[sub_resource type="Animation" id="Animation_xlhw1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TeknoKickLoop176Bpm292894:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameBackground359782:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TeknoKickLoop176Bpm292894:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vjuvc"]
resource_name = "music_fade"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameBackground359782:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.033333335, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-80.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TeknoKickLoop176Bpm292894:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(5.66, 1),
"update": 0,
"values": [0.0, -80.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TeknoKickLoop176Bpm292894:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ijhdc"]
_data = {
&"RESET": SubResource("Animation_xlhw1"),
&"music_fade": SubResource("Animation_vjuvc")
}

[node name="BackgroundMusic" type="Node"]
script = ExtResource("1_u6r47")

[node name="GameBackground359782" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_83psx")
bus = &"Music"
parameters/looping = true

[node name="TeknoKickLoop176Bpm292894" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_u6r47")
autoplay = true
bus = &"Music"
parameters/looping = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ijhdc")
}
